--- a/src/Projeto/Paginas/Home/estilo.css
+++ b/src/Projeto/Paginas/Home/estilo.css
@@ -6,4 +6,4 @@
 
 .home img.Logo-Tela {width: 350px;display: block; margin-left: auto; margin-right: auto; margin-top: 5px; }
 
-img.imagem {max-height: 100%;max-width: 100%; object-fit: cover}
+img.imagem3 {height: 218px;}
