--- a/src/Projeto/Componentes/Rodape/estilo.css
+++ b/src/Projeto/Componentes/Rodape/estilo.css
@@ -1,6 +1,3 @@
 footer {
-    background-color: #2c3e50;
-    color: #fff;
-    padding: 12px;
-    margin-top: 35px;
+    color: rgb(0, 0, 0);
   }
