--- a/src/Projeto/Paginas/ProdutoEspecifico/estilo.css
+++ b/src/Projeto/Paginas/ProdutoEspecifico/estilo.css
@@ -1,3 +1,3 @@
 .tenisEspecifico .container{width: 90%; }
 
-.tenisEspecifico .row{margin: opx;}
+.tenisEspecifico h3.freteGreen{color: rgb(16, 246, 31);}
